syntax = "proto3";

package proto;

option go_package = "./;proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Book {
    rpc Create(BookInfo) returns (CreateBookResponse);
    rpc Delete(DeleteBookRequestResponse) returns (DeleteBookRequestResponse);
    rpc GetAll(google.protobuf.Empty) returns (BookInfoArray);
    rpc GetByID(GetBookRequset) returns (BookInfo);
    rpc GetWithFilter(Filter) returns (BookInfoArray);
}

message BookInfo {
    string ID = 1;
    string title = 2;
    string description = 3;
    string image = 4;
    uint64 pages = 5;
    string author = 6;
    string genre = 7;
    string publisher = 8;
    bool binding = 9;
    string series = 10;
    string language = 11;
    google.protobuf.Timestamp added_at = 12;
}

message Filter {
   repeated string author = 1;
   repeated string genre = 2; 
   repeated string language = 3;
   repeated string publsiher = 4;
}

message BookInfoArray {
    repeated BookInfo arr = 1;
}

message CreateBookResponse {
    string bookID = 1;
}

message DeleteBookRequestResponse {
    string bookID = 1;
}

message GetBookRequset {
    string bookID = 1;
}

